package behavioral.chain_of_responsibility.CB1;

public class Client {
}
